--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,23 @@
             "/Tests/"
         ]
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Mindy\\Pagination\\Tests\\": ""
+        }
+    },
+    "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
     "require": {
-        "php": ">=5.5.9"
+        "php": ">=7.0"
     },
     "require-dev": {
-        "symfony/http-foundation": "~2.8|~3.0",
-        "symfony/routing": "~2.8|~3.0",
+        "symfony/http-foundation": "~3.0|~4.0",
+        "symfony/routing": "~3.0|~4.0",
         "phpunit/phpunit": "~4.0"
-    },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "3.6.8-dev"
-        }
     }
 }
